--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "firebase": "^10.7.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
