--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "sonner": "^1.2.4"
   },
   "devDependencies": {
